--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,6 +1,11 @@
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap');
+
 
 @layer utilities {
   .pause {
@@ -68,7 +73,7 @@ html {
 }
 
 body {
-  font-family: 'Aeonik';
+  font-family: 'Inter', sans-serif;
   background: #120e16;
   color: #f5f4f5;
   font-style: normal;
@@ -101,4 +106,46 @@ body.scrolled .header {
 
 .font_aeonik{
   font-family: 'Aeonik';
+}
+
+
+/* .social-btn {
+	cursor: pointer;
+	height: 50px;
+	width: 50px;
+	color: #333;
+	border-radius: 10px;
+	box-shadow: 0px 10px 10px rgba(0,0,0,0.1);
+	background: white;
+	margin: 5px;
+	transition: 1s;
+} */
+
+/* .social-btn span {
+	width: 0px;
+	overflow: hidden;
+	transition: 1s;
+	text-align: center;
+} */
+
+/* .social-btn:hover {
+	width: 180px;
+	border-radius: 5px;
+}
+
+.social-btn:hover span {
+	padding: 2px;
+	width: max-content;
+} */
+
+#twitter svg {
+	fill: #1da1f2;
+}
+
+#linkedin svg {
+	fill: #0e76a8;
+}
+
+#github {
+	fill: #333;
 }
