--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -108,44 +108,20 @@ body.scrolled .header {
   font-family: 'Aeonik';
 }
 
-
-/* .social-btn {
-	cursor: pointer;
-	height: 50px;
-	width: 50px;
-	color: #333;
-	border-radius: 10px;
-	box-shadow: 0px 10px 10px rgba(0,0,0,0.1);
-	background: white;
-	margin: 5px;
-	transition: 1s;
-} */
-
-/* .social-btn span {
-	width: 0px;
-	overflow: hidden;
-	transition: 1s;
-	text-align: center;
-} */
-
-/* .social-btn:hover {
-	width: 180px;
-	border-radius: 5px;
+.progress {
+  height: 0.1875rem;
 }
 
-.social-btn:hover span {
-	padding: 2px;
-	width: max-content;
-} */
-
-#twitter svg {
-	fill: #1da1f2;
+.progress .progress-bar {
+  height: 0.2rem;
+  transform-origin: left;
+  will-change: transform;
+  transform: scaleX(0);
+  width: 100%;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
 }
 
-#linkedin svg {
-	fill: #0e76a8;
-}
-
-#github {
-	fill: #333;
+a:hover{
+  cursor: none;
 }
