--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -82,7 +82,7 @@ body {
   transition: background 0.6s ease-out, color 0.6s ease-out;
 }
 
-body.hide_header .header {
+body.hide_header .header .header_container{
   transform: translateY(-100%);
 }
 
@@ -124,4 +124,90 @@ body.scrolled .header {
 
 a:hover{
   cursor: none;
+}
+
+
+/* .outer-menu.menu-visible .hamburger > div {
+  transform: rotate(135deg);
+}
+.outer-menu.menu-visible .hamburger > div:before {
+  top: 0;
+  transform: rotate(90deg);
+}
+.outer-menu.menu-visible .hamburger > div:after {
+  top: 0;
+  transform: rotate(90deg);
+  opacity: 0;
+} */
+.outer-menu.menu-visible .menu {
+  pointer-events: auto;
+  visibility: visible !important;
+  backdrop-filter: blur(0.625rem);
+  -webkit-backdrop-filter: blur(0.625rem);
+}
+.outer-menu.menu-visible .menu > div {
+  transform: scale(1);
+  transition-duration: 0.75s;
+}
+.outer-menu.menu-visible .menu > div > div {
+  opacity: 1;
+  transition: opacity 0.4s ease 0.4s;
+}
+/* .outer-menu.menu-visible:hover .hamburger > div {
+  transform: rotate(225deg);
+} */
+.outer-menu .hamburger {
+  z-index: 1;
+  backface-visibility: hidden;
+}
+/* .outer-menu .hamburger > div {
+  height: 0.125rem;
+  transition: all 0.4s ease;
+  -webkit-box-pack: center;
+}
+.outer-menu .hamburger > div:before, .outer-menu .hamburger > div:after {
+  content: "";
+  z-index: 1;
+  position: absolute;
+  left: 0;
+  width: 100%;
+  top: -0.5rem;
+  height: 0.125rem;
+  background: inherit;
+  transition: all 0.4s ease;
+}
+.outer-menu .hamburger > div:after {
+  top: 0.5rem;
+} */
+.outer-menu .menu {
+  backface-visibility: hidden;
+  outline: 0.0625rem solid transparent;
+}
+.outer-menu .menu > div {
+  width: 250vw;
+  height: 250vw;
+  transform: scale(0);
+  will-change: transform;
+  border-radius: 50%;
+  transition: all 0.4s ease;
+  backface-visibility: hidden;
+  background: rgba(0, 0, 0, 0.5);
+}
+@supports not (backdrop-filter: blur(1px)) {
+  .outer-menu .menu > div {
+    background: rgba(0, 0, 0, 0.8);
+  }
+}
+.outer-menu .menu > div > div {
+  max-width: 90vw;
+  transition: opacity 0.4s ease;
+}
+.outer-menu .menu > div ul li a {
+  background: linear-gradient(90deg, #fff 0%, #fff 50% , #fdd600 51%, #fdd600 100%);
+  background-size: 200% 100%;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.outer-menu .menu > div ul li a:hover, .outer-menu .menu > div ul li a:focus {
+  background-position: 100% 0;
 }
