--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -226,7 +226,27 @@ a:hover{
 }
 .text-gradient {
   -webkit-text-fill-color: transparent;
-  background: linear-gradient(90deg,#ffffff40,#ffffff40 50%,#ffffff 50%,#ffffff);
+  background: linear-gradient(90deg,#ffffff40,#ffffff40 50%,#f5f4f5 50%,#f5f4f5);
   background-size: 200% 100%;
   -webkit-background-clip: text;
+}
+
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  border-radius: 10px;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #f5f4f5; 
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #f5f4f5; 
 }
